[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opentlu"
version = "0.1.0"
description = "Trustworthy Learning in Uncertainty Framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pydantic>=2.4.0",
    "structlog>=23.1.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "tox>=4.0.0",
    "mypy>=1.6.0",
    "ruff>=0.1.0",
    "hypothesis>=6.92.0",
]
viz = [
    "matplotlib>=3.8.0",
    "plotly>=5.18.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/opentlu"]

[tool.mypy]
strict = true
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-v --tb=short"
